Added fillline animation and art for ui mockup

--- a/LineMarkerLib/src/main/res/values/colors.xml
+++ b/LineMarkerLib/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="baseLineColor">#858585</color>
     <color name="fillLineColor">#4edd5b</color>
-    <color name="marker1Color">#8f34b7</color>
+    <color name="marker1Color">#8c0827</color>
     <color name="marker2Color">#4755d3</color>
+    <color name="marker3Color">#c754ea</color>
+    <color name="marker4Color">#074916</color>
+    <color name="marker5Color">#544d1c</color>
     <color name="defaultLabelColor">#000000</color>
     <color name="white">#ffffff</color>
 
